Grace/tests/gibbs/errors/t178.grace
// ERROR = P1004
var block := { print "Hello world" }
catch )
case {
    e : Error -> print "OK; Caught an error."
}
